@@ -2,6 +2,7 @@
     - Hide validate() and reader op() methods from backtrace
     - Tweak multi candidate parse(_U:) and parse($) candidates;
       ensure all options are processed by the parser.
+    - Indicate position of parsing errors #15
 0.5.5 2020-07-07
     - Changed LibXML::HashMap node handling:
       -- Store nodes directly; avoid coercement to node-sets
